[package]
name = "rust-fixer-lsp"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
proc-macro2 = "1.0.56"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tower-lsp = "0.19.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.6.0" }
